# Projects

./: detect.py
3i/: README.md  requirements.txt
JK/: Makefile  README.md  assistant.py  config.py  hardware.py  main.py  memory.py  pyproject.toml  requirements.txt  setup.sh  vision.py
JK/app/core/: config.py  logger.py
JK/app/hardware/: drivers.py
JK/app/services/: audio.py  llm.py  memory.py  vision.py
Multi-Modal AI Assistant on Raspberry Pi 5/: README.md  config.py
Real-Time Speaker Isolation & Identification (CLI + Web)/: README.md  requirements.txt
asdfghjkkl/: README.md  main.py  requirements.txt
hi/: PROJECT_SUMMARY.md  README.md  ai_assistant.py  assistant.py  cli.py  config.py  detector.py  home_automation_module.py  install.sh  llm_handler.py  llm_module.py  object_detection_module.py  requirements.txt  setup.py  test.py  test_assistant.py  voice_module.py
hi1/: config.ini  main.py
hi2/: README.md  config.ini  main.py  requirements.txt  run_assistant.sh  setup.sh  test_installation.py
hi3/: README.md  chat_mode.py  main.py  object_detection_mode.py  requirements.txt
lavanya/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  config.yaml  docker-compose.yml  nginx.conf  requirements.txt  run_demo.py
lavanya3/: main.py
mark_1/: README.md  main.py  requirements.txt
mark_10/: main.py  requirements.txt
mark_2/: README.md  config.py
mark_2.1/: README.md  config.py
mark_2.2/: README.md  config.py  main.py  requirements.txt
mark_3/: README.md  SETUP_VOICE_HARDWARE.md  (+3 more)
mark_3.0/: README.md  config.py  requirements.txt  run.py
(+126 files in other folders)
